Sun Dec 26 23:50:16 2004  Tim Janik  <timj@gtk.org>

	* sfilog.c: cosmetics, strip path from executable names if logging
	debugging info.

Fri Dec 24 22:48:19 2004  Tim Janik  <timj@gtk.org>

	* sfidl-corecxx.cc: there's no need to inline the choice 
	value accessor for enum types in generated code.

	* sfiparams.[hc]: allow provision of a choice value array for
	GEnum types by setting an accessor function with
	sfi_enum_type_set_choice_value_getter().

Mon Dec 20 15:03:57 2004  Tim Janik  <timj@gtk.org>

	* sfidl-corecxx.cc: call property_changed() in response to automated
	properties. changed property_changed() to return a bool which indicates
	whether update_modules() needs to be called after property_changed().
	adapted all usages.

Sun Dec 19 01:01:41 2004  Tim Janik  <timj@gtk.org>

	* sfiserial.c (sfi_serialize_primitives): relaxed parsing strictness 
	for booleans, so we parse any int and float as boolean now.

Thu Dec 16 01:57:36 2004  Tim Janik  <timj@gtk.org>

	* sfistore.c (sfi_rstore_new_open): fail to open directories,
	block devices or symbolic links.

Mon Dec  6 15:37:29 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* sfidl-generator.cc(splitName): Fix splitting of "Bse::FFTSize" to
	"Bse", "FFT" and "Size", using the rule that more than two upper case
	letters followed by a lower case letter indicate a word boundary.

	* testsfidl.cc: Added "Bse::FFTSize", "XWindows::WMHints" to test the
	new rule.

Fri Dec  3 21:24:34 2004  Stefan Westerfeld  <stefan@space.twc.de>

	* sfidl-parser.*: Parse #pragma lines into Pragma structures, which can
	then be retrieved by individual language bindings using
	parser.getPragmas ("SomeBinding"). This will ret

	* sfidl-clientc.*: Support new #pragma lines:
	  #pragma SFIDL ClientC::binding_specific_c_header "foo.h"
	  #pragma SFIDL ClientC::binding_specific_c_source "foo.c"
	They allow including custom C code into the generated output.

Fri Dec  3 15:50:31 2004  Tim Janik  <timj@gtk.org>
